Oops! Need to update the index!

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>Tobi's GitHub Page</h1>
 <p>Hello. Here you will find old Sonic fansites as they were 20 years ago:</p>
-<a href=/ratsonic/sonic/index.html>Rat.org Backup</a>
-<a href=/sonichq/index.html>Sonic HQ</a>
-<a href=/sonicstadium/index.html>Sonic Stadium</a>
+<p><a href=/ratsonic/sonic/index.html>Rat.org Backup</a></p>
+<p><a href=/sonichq>Sonic HQ</a></p>
+<p><a href=/sonicstadium/topcities>Sonic Stadium</a></p>
 </body>
 </html>
