Sonic Stadium updates

--- a/sonicstadium/angelfire/sonadv2pre.html
+++ b/sonicstadium/angelfire/sonadv2pre.html
@@ -60,7 +60,7 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 <font color=green><b>23 June 2001:</B><br><div align=center><font size="2"><font color=black><b>Well, this is it. The day that everyone will be either waiting for Sonic Adventure 2, or already have SA2 and are playing it at this very moment. If you aren't considering getting SA2, why the hell not? All the coverage of the sequel (that appeared here FIRST ^_-) must have convinced you by now to go out and shell out a mere £30 in exchange for the best Sonic game to date.<p>
 <font color=black>One last thing about the SA2 limited edition box set: I have no idea if Sega of America have made a decision to sell the game with the box set yet, but by now it'll be too late. European gamers do not fret, because if you haven't bought SA2 yet, DON'T! Why?<p>
-Because the limited edition box set WILL make it to UK shores, the box, a special edition Sonic music CD, a Sonic history book, a gold Sonic coin, and of course the game, will be selling TONIGHT at <a href="http://www.dreamcast-europe.com" target=_blank><font color=blue>www.dreamcast-europe.com</a></font> for £30! The same price as a normal game! One catch - there are only 200 box sets. So get a box, like I definitely will, and be one of the lucky 200 to grab one. You can only purchase the box set at dreamcast-europe.com's Online store, and the copies will become available from midnight onwards! So get those notes ready! I'll see you at the mad rush!
+Because the limited edition box set WILL make it to UK shores, the box, a special edition Sonic music CD, a Sonic history book, a gold Sonic coin, and of course the game, will be selling TONIGHT at <a href="https://web.archive.org/20011101000000/http://www.dreamcast-europe.com" target=_blank><font color=blue>www.dreamcast-europe.com</a></font> for £30! The same price as a normal game! One catch - there are only 200 box sets. So get a box, like I definitely will, and be one of the lucky 200 to grab one. You can only purchase the box set at dreamcast-europe.com's Online store, and the copies will become available from midnight onwards! So get those notes ready! I'll see you at the mad rush!
 
 </table>
 <p><hr width=90%>
@@ -89,13 +89,13 @@ Because the limited edition box set WILL make it to UK shores, the box, a specia
 <a name=screens><div align=center><a href="sonadv2shots.html">
 <font color="blue"><b>Click here for all of the lastest screenshots!!!</a><br></font>
 <p>
-<font face="comic sans ms" color=#ffc000><b>Wanna see the Sonic Adventure 2 Trailer released @ E3 2000 by the one and only <a href="http://www.sonicteam.com/"><font color=blue>Sonic Team?</a></font> This movie MUST BE SEEN TO BE BELIEVED! WATCH IT NOW!</font>
+<font face="comic sans ms" color=#ffc000><b>Wanna see the Sonic Adventure 2 Trailer released @ E3 2000 by the one and only <a href="https://web.archive.org/20011101000000/http://www.sonicteam.com/"><font color=blue>Sonic Team?</a></font> This movie MUST BE SEEN TO BE BELIEVED! WATCH IT NOW!</font>
 <p></div>
 <table border=0 width=80%><tr><td>
-<a href="http://www.sonicteam.com/sonicadv2/mov/adv2_trailer_sample.mpg"><img src="pics\sonadv2small.gif" align=left></a>
+<a href="https://web.archive.org/20011101000000/http://www.sonicteam.com/sonicadv2/mov/adv2_trailer_sample.mpg"><img src="pics\sonadv2small.gif" align=left></a>
 <td><font face="comic sans ms" size=2 align=left color=black><b> Small Video Screen <font color=green>Size: 1.0 MB <font color=blue>Type: MPEG File. 
 <tr><td>
-<p><a href="http://www.sonicteam.com/sonicadv2/mov/adv2_trailer.mpg"><img src="pics\sonadv2small.gif" align=left></a><td><font face="comic sans ms" size=2 align=left color=black><b> Large Video Screen <font color=green>Size: 5.9 MB <font color=blue>Type: MPEG File.
+<p><a href="https://web.archive.org/20011101000000/http://www.sonicteam.com/sonicadv2/mov/adv2_trailer.mpg"><img src="pics\sonadv2small.gif" align=left></a><td><font face="comic sans ms" size=2 align=left color=black><b> Large Video Screen <font color=green>Size: 5.9 MB <font color=blue>Type: MPEG File.
 </table>
 
 <p>
