--- a/sonicstadium/angelfire/sonicroms.html
+++ b/sonicstadium/angelfire/sonicroms.html
@@ -49,12 +49,12 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 <font face="comic sans ms" color=red><div align=center><h1><u>Sonic ROMS & Emus</u></font></h1></div>
 
 <div align=center><B><font color=black>If you're after some good old Sonic nostalgia, then this is the right place. Download a Sega emulator, get some ROMS from the following pages and play all those Sonic games you have never played or otherwise. Those of you trying to download these from your DC, don't be silly.<p>
-Here are links to the possible ROMS/Emu pages you will need. These links are courtesy of Electro Sonic Dan at <a href="http://www.sonicroms.org" target=_blank><font color=blue>Sonic Roms.Org</a></font>, so none of your lip when you get there son, or you're in for the high jump! ^_^ Gotta do the legal crap though, the ROMS are for... actually, I dunno, temporary playing, what? o_O Either way, should you download any of the ROMS and Emus, you MUST DELETE THEM OFF YOUR HARD DRIVE WITHIN 24 HOURS!!! Right, got that outta the way, here are the links to the Sonic Roms.Org pages you will need.<p>
+Here are links to the possible ROMS/Emu pages you will need. These links are courtesy of Electro Sonic Dan at <a href="https://web.archive.org/20011101000000/http://www.sonicroms.org" target=_blank><font color=blue>Sonic Roms.Org</a></font>, so none of your lip when you get there son, or you're in for the high jump! ^_^ Gotta do the legal crap though, the ROMS are for... actually, I dunno, temporary playing, what? o_O Either way, should you download any of the ROMS and Emus, you MUST DELETE THEM OFF YOUR HARD DRIVE WITHIN 24 HOURS!!! Right, got that outta the way, here are the links to the Sonic Roms.Org pages you will need.<p>
 <font color=shiser>Oh yeah, it's quite annoying for Dan to say this, so I'll say it too and get on your tits and all! If any linking to Sonic Roms.Org is done, you gotta ask Dan first obviously, it's not my site, so don't run to me. ^_^ If you wanna link to his ROMS also, don't link directly to the ROMS/Emus, just to the pages. Just thought Dan may be tired of saying it, so I'll say it instead.</font><p>
 ... Hee hee, I got the text colour above by putting in "font color=shiser". No joke! Hee hee... Oh. Anyway, the ROMS, yes!
 <p>
                                      
-<h3><a href="http://www.gibnynex.gi/home/danny/roms/emus.htm" target=_blank><font color=blue>Click here for the <font color=green>Emulators</font> page</a></font></h3><p>
+<h3><a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/emus.htm" target=_blank><font color=blue>Click here for the <font color=green>Emulators</font> page</a></font></h3><p>
 <font size=2 color=black>Here are the best Emulators to get. If they are not on the page, click on the link in the table:</font><p>
 
 <table border=2 bordercolor=gold width=90%>
@@ -76,7 +76,7 @@ Here are links to the possible ROMS/Emu pages you will need. These links are cou
 
 <h3><font color=green>ROMS</h3>
 
-<div align=center><a href="http://www.gibnynex.gi/home/danny/roms/genesis.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Genecyst</font> page</a><p>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/genesis.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Genecyst</font> page</a><p>
 
 <font size=2 color=black>Here's the ROMS you can get on this page:</font><p>
 
@@ -111,8 +111,8 @@ Here are links to the possible ROMS/Emu pages you will need. These links are cou
 <hr width=80%><p>
 
 <b><font size=3 color=green>Meka</font><br>
-<a href="http://www.gibnynex.gi/home/danny/roms/mastersystem.htm" target=_blank><font size=2 color=blue>Master System</a></font><br>
-<a href="http://www.gibnynex.gi/home/danny/roms/gamegear.htm" target=_blank><font size=2 color=blue>Game Gear</a></font><p>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/mastersystem.htm" target=_blank><font size=2 color=blue>Master System</a></font><br>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/gamegear.htm" target=_blank><font size=2 color=blue>Game Gear</a></font><p>
 
 <font size=2 color=black>Here's the ROMS you can get on this page:</font><p>
 
@@ -144,7 +144,7 @@ Here are links to the possible ROMS/Emu pages you will need. These links are cou
 </table>
 <p><hr width=80%><p>
 
-<a href="http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Happy GB</font> page</a><p>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Happy GB</font> page</a><p>
 <font size=2 color=black>Here's the ROMS you can get on this page:</font><p>
 <table border=2 width=80%>
 <tr><td width=20%>
@@ -153,7 +153,7 @@ Here are links to the possible ROMS/Emu pages you will need. These links are cou
 </table>
 <p><hr width=80%><p>
 
-<a href="http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>NESticle</font> page</a><p>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>NESticle</font> page</a><p>
 <font size=2 color=black>Here's the ROMS you can get on this page:</font><p>
 <table border=2 width=80%>
 <tr><td width=20%>
@@ -163,16 +163,16 @@ Here are links to the possible ROMS/Emu pages you will need. These links are cou
 <font size="2"><b><font color=green>Somari</font>&nbsp;|&nbsp;<font size=2><a href="somari.html"><font color=blue>See info</a></font>
 <p><hr width=80%><p>
 
-<a href="http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Nlke</font> page</a><p>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/nintendo.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>Nlke</font> page</a><p>
 <font size="2"><b><font color=green>Sonic the Hedgehog</font>&nbsp;|&nbsp;<font size=2><a href="sonsnes.html"><font color=blue>See info</a></font>
 <p><hr width=80%><p>
 
-<a href="http://www.gibnynex.gi/home/danny/roms/misc.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>NGPocket</font> page</a><p>
+<a href="https://web.archive.org/20011101000000/http://www.gibnynex.gi/home/danny/roms/misc.htm" target=_blank><font size=3 color=blue><b>Click here for the <font color=green>NGPocket</font> page</a><p>
 <font size="2"><b><font color=green>Sonic Pocket Adventure</font>&nbsp;|&nbsp;<font size=2><a href="sonpadv.html"><font color=blue>See info</a></font>
 <p><hr width=80%><p>
 
-<font color=black><b>With thanks to and in association with <a href="http://sonicroms.org" target=_blank><font color=blue>Sonic Roms.Org</a></font><br>
-<a href="http://www.sonicroms.org" target=_blank><img src="Update/sonicromslogo.gif"></a><p>
+<font color=black><b>With thanks to and in association with <a href="https://web.archive.org/20011101000000/http://sonicroms.org" target=_blank><font color=blue>Sonic Roms.Org</a></font><br>
+<a href="https://web.archive.org/20011101000000/http://www.sonicroms.org" target=_blank><img src="Update/sonicromslogo.gif"></a><p>
 
 <h4><font color=#ffc000><u>*Send anything Sonic to Dreadknux!*<br>
 <a href=mailto:dreadknux@knuckles.co.uk><font color=blue>dreadknux@knuckles.co.uk</a></font><br>
