--- a/sonicstadium/angelfire/uniform.html
+++ b/sonicstadium/angelfire/uniform.html
@@ -48,7 +48,7 @@ The other reason why it's Universal is that I didn't really want to go into all 
 Unfortunately, although you can now send text messages to Dreadknux without any 'going to your e-mail account' hassle, anything for sections such as Downloads or SFGC (Sonic Fan Games Club) that asks for you to send in actual programs, art and stuff, you still need to send that via e-mail, seeings as you gotta upload the thing, then send it. UNLESS you already have it online, then you can just tell me where your stuff is, and I'll do the rest. So, sorry about that. Hey, don't let that discourage you though, at least you don't have to go all the way to your e-mail just to say a four letter sentence. ^_^
 
 <p><div align=center><font color=#ffc000>
-<FORM METHOD=POST ACTION="http://dreadknux.topcities.com/cgi-bin/home/formmail/dreadknux">
+<FORM METHOD=POST ACTION="/sonicstadium/topcities/cgi-bin/home/formmail/dreadknux">
 <INPUT TYPE="HIDDEN" NAME="account" VALUE="dreadknux">
 <INPUT TYPE="HIDDEN" NAME="cata" VALUE="accounts">
 <p>Your name, or nickname if you prefer:<br>
