--- a/sonicstadium/cjb/main.html
+++ b/sonicstadium/cjb/main.html
@@ -17,10 +17,10 @@ We're sorry but you've reached a Microsoft IIS hosted web site that uses frames.
 frames-enabled browser in order to view the site. CBS.
 </center></body>
 </noframes>
-<frame name="thepage" src="http://dreadknux.topcities.com/sonicstadium/index.html/main.html" marginwidth="0" marginheight="0"
+<frame name="thepage" src="/sonicstadium/topcitities/index.html/main.html" marginwidth="0" marginheight="0"
 frameborder="no" framespacing="0" border="0">
 
-<frame name="pb" src="http://rstrip.namezero.com/navbar/strip.jsp?name=sonic-stadium.com&viewsize=full_ad&product=5"
+<frame name="pb" src="https://web.archive.org/20011101000000/http://rstrip.namezero.com/navbar/strip.jsp?name=sonic-stadium.com&viewsize=full_ad&product=5"
 marginwidth="0" marginheight="0" scrollbars="no" scrolling="no" framespacing="0" frameborder="yes" border="1" NORESIZE>
 
 </frameset>
