More fixes! Woohoo!

--- a/sonicstadium/topcities/dreadknuxnet.html
+++ b/sonicstadium/topcities/dreadknuxnet.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT>
 <HTML>
@@ -59,7 +59,7 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 <div align=center><font size=2 color=black><b>Yes, I am pretty much serious when I say I'm gonna try my damndest to do something for you, the Sonic community, so I have in development other websites including Sonic. When finished, they all bundle together with the Sonic Stadium to make the Dreadknux Network. Well, I had to call it something, didn't I? ;)<p>
 
-<center><a href="http://dreadknux.topcities.com/index.html" target="_BLANK"><img SRC="Update/dknuxnetbanner.gif" ALT="The base site. At least that's up aswell." BORDER=0 height=60 width=468></a></center>
+<center><a href="https://web.archive.org/20011101000000/http://dreadknux.topcities.com/index.html" target="_BLANK"><img SRC="Update/dknuxnetbanner.gif" ALT="The base site. At least that's up aswell." BORDER=0 height=60 width=468></a></center>
 <font color=orange>I had to make a base site for the whole thing to go in one directory site thing. You know what I'm talking about, right? ^_^ Aswell as info on upcoming sites and stuff by me, it has a history of my internet life, fun games my web buddies listed in there. Not very exciting, but something to check out if you're bored.</font><p>
 
 <center><img src="Update/ssrbanner.gif" alt="This will be coming soon, I swear."></a></center>
