--- a/sonicstadium/topcities/frame.html
+++ b/sonicstadium/topcities/frame.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><html>
 <head>
@@ -53,10 +53,10 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 <FONT FACE="Verdana"><FONT SIZE="1"><a href="actionreplay.html"><FONT COLOR="#ffc000">Game Genie Codes</a><BR>
                 
 <FONT FACE="Verdana"><FONT SIZE="2"><FONT COLOR="blue"><b>Community</b><BR>
-<FONT FACE="Verdana"><FONT SIZE="1"><a href="http://pub33.ezboard.com/bthesonicstadiummb" target=_top><FONT COLOR="blue">Dreadknux's Forum</a><BR>
+<FONT FACE="Verdana"><FONT SIZE="1"><a href="https://web.archive.org/20011101000000/http://pub33.ezboard.com/bthesonicstadiummb" target=_top><FONT COLOR="blue">Dreadknux's Forum</a><BR>
 <FONT FACE="Verdana"><FONT SIZE="1"><a href="chat.html" target=_blank><FONT COLOR="blue">Stadium Chat</a><BR>
-<FONT FACE="Verdana"><FONT SIZE="1"><a href="http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=sign" target=_blank><FONT COLOR="blue">Sign the GuestBook</a><BR>
-<FONT FACE="Verdana"><FONT SIZE="1"><a href="http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=view" target=_blank><FONT COLOR="blue">View the GuestBook</a><BR>
+<FONT FACE="Verdana"><FONT SIZE="1"><a href="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=sign" target=_blank><FONT COLOR="blue">Sign the GuestBook</a><BR>
+<FONT FACE="Verdana"><FONT SIZE="1"><a href="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=view" target=_blank><FONT COLOR="blue">View the GuestBook</a><BR>
 
 <FONT FACE="Verdana"><FONT SIZE="2"><FONT COLOR="orange"><b><u>*Sonic Fan Club*<br><a href="sonfan.html"><font color=orange>*INFO PAGE*</b></u></a><BR>
 <FONT FACE="Verdana"><FONT SIZE="1"><a href="sonfanews.html"><FONT COLOR="orange">SFCNews</a><BR>
@@ -95,11 +95,11 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 
 <P ALIGN=CENTER>
-<A HREF="http://www.p-a-u-l.com/cgi-bin/topsites.cgi?dreadknux" TARGET="_BLANK"> 
-<IMG SRC="http://www.p-a-u-l.com/sonic/top10/banner2.gif" ALT="Vote for me on The Top 10 StH [Sonic The Hedgehog] Sites" BORDER=0></A> <br>
+<A HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/topsites.cgi?dreadknux" TARGET="_BLANK"> 
+<IMG SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/top10/banner2.gif" ALT="Vote for me on The Top 10 StH [Sonic The Hedgehog] Sites" BORDER=0></A> <br>
 <font size="1" color=black>Please vote for my site! ^_^<br>
 
-<A HREF="http://www.topsitelists.com/topsites.cgi?ID=227&user=sth&area=games" target=_blank><IMG SRC="http://www.teamartail.com/link/top50.gif" border=0></A><p>
+<A HREF="https://web.archive.org/20011101000000/http://www.topsitelists.com/topsites.cgi?ID=227&user=sth&area=games" target=_blank><IMG SRC="https://web.archive.org/20011101000000/http://www.teamartail.com/link/top50.gif" border=0></A><p>
 <font size=2 color=orange><b>The Sonic Stadium<br>
 <font size=1 color=red><b>Part of the Dreadknux Network</font>
 
