--- a/sonicstadium/topcities/links.html
+++ b/sonicstadium/topcities/links.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><HTML>
  <HEAD>
@@ -61,54 +61,54 @@ Maybe you already have a Sonic website and have come across this page to link my
 <p>
 <font face="comic sans ms" color=green><div align=center><h3><u>Sonic Links!</u></font></h3></div>
 
-<div align=center><a href="http://www.sonicteam.com" target=_blank><img src="pics/st_banner_1.gif" alt="The Official Sonic Team Website" width=100 height=40></a><br>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.sonicteam.com" target=_blank><img src="pics/st_banner_1.gif" alt="The Official Sonic Team Website" width=100 height=40></a><br>
 <font color=blue><b>The Official Sonic Team Website.
 <br>&nbsp;
-<div align=center><a href="http://www.sonicthecomic.co.uk" target=_blank><img src="pics/stc.jpg" alt="The Official Sonic The Comic Website"></a><br>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.sonicthecomic.co.uk" target=_blank><img src="pics/stc.jpg" alt="The Official Sonic The Comic Website"></a><br>
 <font color=#ffcc00><b>The Official Sonic The Comic Website. <br>(The BEST Sonic Comic out there, and guess what? It's British!!! ^____^)
 <br>&nbsp;
-<div align=center><a href="http://www.mooglecavern.com" target=_blank><img src="pics/mclarg03.gif" alt="The Moogle Cavern"></a><br>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.mooglecavern.com" target=_blank><img src="pics/mclarg03.gif" alt="The Moogle Cavern"></a><br>
 <font color=red><b>My buddy Kulock's website. Run by someone just as insane as me :P <br>Lots of neat things to see in there, and not just all Sonic. Check it out.
 <br>&nbsp;
-<div align=center><a href="http://www.geocities.com/SouthBeach/Cove/4161/sonic.html" target=_blank><img src="pics/jwalker.gif" alt="J-Walker's Sonic Page"></a><br>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.geocities.com/SouthBeach/Cove/4161/sonic.html" target=_blank><img src="pics/jwalker.gif" alt="J-Walker's Sonic Page"></a><br>
 <font color=blue><b>J-Walker's Sonic Page. A long standing site, and well worth looking in.
 <br>&nbsp;
-<div align=center><a href="http://www.sonicfoundation.org/home.shtm" target=_blank><img src="Update/tsfbutton.gif" alt="The Sonic Foundation"></a><br>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.sonicfoundation.org/home.shtm" target=_blank><img src="Update/tsfbutton.gif" alt="The Sonic Foundation"></a><br>
 <font color=#ffcc00><b>This site is one of the best for finding out anything about Sonic (apart from the Stadium of course ;D). Kedzie runs it, decent webmaster. You must have visited this site at least once.
 <br>&nbsp;
-<div align=center><a href="http://www.hpalace.com" target=_blank><img src="pics/hplogo.gif" alt="The Hidden Palace"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.hpalace.com" target=_blank><img src="pics/hplogo.gif" alt="The Hidden Palace"></a>
 <br>
 <font color=red><b>The Hidden Palace. A nice little website about Sonic and Dreamcast, and well suited to Dreamkey browsers too. Worth a look.
 <br>&nbsp;
-<div align=center><a href="http://www.sonicroms.org" target=_blank><img src="pics/sonicromslink.gif" alt="Sonic Roms.Org"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.sonicroms.org" target=_blank><img src="pics/sonicromslink.gif" alt="Sonic Roms.Org"></a>
 <br>
 <font color=blue><b>Need a Sonic ROM that isn't listed in the Stadium? Wanna see a site that has interviews with *WOAH!!* Nigel Kitching, of STC fame? Go to Dans Webz, which Sonic Roms.org is a part of.
 <br>&nbsp;
 <table border=0 width=90%><tr><td>
-<div align=center><a href="http://ssntails.org/hhog" target=_blank><img src="Update/hhogzone.gif" align=center alt="H Hog's Zone">
+<div align=center><a href="https://web.archive.org/20011101000000/http://ssntails.org/hhog" target=_blank><img src="Update/hhogzone.gif" align=center alt="H Hog's Zone">
 <tr><td><div align=center><font size=2 color=#ffc000><b>A great little website from my good web buddy H Hog. Has downloads, ROMS and a hoax section, of which a few have appeared in the Sonic Fan Club</font></table><p>
-<div align=center><a href="http://expage.com/sonicplanet" target=_blank><img src="Update/sonicplanetlink.gif" align=center alt="Sonic Planet."></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://expage.com/sonicplanet" target=_blank><img src="Update/sonicplanetlink.gif" align=center alt="Sonic Planet."></a>
 <br>
 <font color=red><b>Sonic Planet's just had an overhaul, and I must say it looks very nice. Some pretty original stuff in there too, go see.
 <br>&nbsp;
-<div align=center><a href="http://www.sonicsecrets-uk.com" target=_blank><img src="Update/sonsecrets.gif" align=center alt="Sonic Secrets UK"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.sonicsecrets-uk.com" target=_blank><img src="Update/sonsecrets.gif" align=center alt="Sonic Secrets UK"></a>
 <br>
 <font color=blue><b>Sonic Secrets UK is created by a fellow English companion, Ian Bennet. Take a look at his site, it's very good. It doesn't just mention Sonic, but all of Sonic Team's games on Dreamcast too.
 <br>&nbsp;
-<div align=center><a href="http://sunsetvalley.cjb.net/" target=_blank><img src="http://www.angelfire.com/ma3/Zero/banners/sunban.gif" align=center alt="Sunset Valley"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://sunsetvalley.cjb.net/" target=_blank><img src="https://web.archive.org/20011101000000/http://www.angelfire.com/ma3/Zero/banners/sunban.gif" align=center alt="Sunset Valley"></a>
 <br>
 <font color=#ffcc00><b>Sunset Valley is a well built site, and definitely worth checking into every now and again. Make sure you do, there's a lot of valuable stuff in there.
 <br>&nbsp;
-<div align=center><a href="http://www.angelfire.com/games3/sonichedgehogs" target=_blank><img src="http://www.angelfire.com/games3/sonichedgehogs/sonicnewsbanner.gif 
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.angelfire.com/games3/sonichedgehogs" target=_blank><img src="https://web.archive.org/20011101000000/http://www.angelfire.com/games3/sonichedgehogs/sonicnewsbanner.gif 
 " align=center alt="Sonic News"></a>
 <br>
 <font color=red><b>Sonic News is not only up to date with, well, Sonic news, but also has lots of info about a whole range of Sonic info, much like the Sonic Stadium has now. If you're looking for a site like this, go to Sonic News now.
 <br>&nbsp;
-<div align=center><a href="http://www.dreamwater.net/vacation12/index.htm" target=_blank><img src="http://www.dreamwater.net/vacation12/IRISBAN.gif" align=center alt="Iris & Sonic's Vacation Spot"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.dreamwater.net/vacation12/index.htm" target=_blank><img src="https://web.archive.org/20011101000000/http://www.dreamwater.net/vacation12/IRISBAN.gif" align=center alt="Iris & Sonic's Vacation Spot"></a>
 <br>
 <font color=blue><b>Iris & Sonic's Vacation Spot reminds me much of this site. It has lots of good info for the common Sonic fan to dig into, and plenty more for the avid fan too. Great for a laugh, come here for a fresh look in the Sonic world.
 <br>&nbsp;
-<div align=center><a href="http://www.geocities.com/shroomowl27/index.html" target=_blank><img src="Update/owlsden.jpg" align=center alt="The Owl's Den"></a>
+<div align=center><a href="https://web.archive.org/20011101000000/http://www.geocities.com/shroomowl27/index.html" target=_blank><img src="Update/owlsden.jpg" align=center alt="The Owl's Den"></a>
 <br>
 <font color=#ffcc00><b>This sweet is small site holds a lot of precious sprite sheets should you think of making a Fan Game or something like that. He has a lot of hoaxes too, most of which are hosting right here in <a href="fanhoax.html"><font color=darkorange>Sonic Hoaxers Club</a></font>. Some are strange, and others are mental! A great site by NightOwl, a good pal of Dreadknux.
 <br>
