--- a/sonicstadium/topcities/linkto.html
+++ b/sonicstadium/topcities/linkto.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><HTML>
  <HEAD>
@@ -64,13 +64,13 @@ Looky down there. See them? You can use these banners to link to the Dreadknuxst
 <table border=0>
 <tr><td><font color=black size=1>The following created by Dreadknux.<tr><td>
 <div align=center><img src="Update/stadiumbanner1.gif"><br>
-<font size=2 font color=black><b>< a href="http://www.sonic-stadium.com" target=_blank ><br>< img src="www.angelfire.com/games2/sonicstadium/Update/stadiumbanner1.gif" > < /a > <tr><td>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner1.gif" > < /a > <tr><td>
 <div align=center><img src="Update/stadiumbanner2.gif"><br>
-<font size=2 font color=black><b>< a href="http://www.sonic-stadium.com" target=_blank ><br>< img src="www.angelfire.com/games2/sonicstadium/Update/stadiumbanner2.gif" > < /a > <tr><td>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner2.gif" > < /a > <tr><td>
 <div align=center><img src="Update/stadiumbanner3.gif"><br>
-<font size=2 font color=black><b>< a href="http://www.sonic-stadium.com" target=_blank ><br>< img src="www.angelfire.com/games2/sonicstadium/Update/stadiumbanner3.gif" > < /a > <tr height=100>
+<font size=2 font color=black><b>< a href="https://web.archive.org/20011101000000/http://www.sonic-stadium.com" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/stadiumbanner3.gif" > < /a > <tr height=100>
 <td><div align=center><img src="Update/sfcbanner.gif"><br>
-<font size=2 font color=black><b>< a href="http://www.angelfire.com/games2/sonicstadium/sonfan.html" target=_blank ><br>< img src="www.angelfire.com/games2/sonicstadium/Update/sfcbanner.gif" > < /a >
+<font size=2 font color=black><b>< a href="/sonicstadium/angelfire/sonfan.html" target=_blank ><br>< img src="/sonicstadium/angelfire/Update/sfcbanner.gif" > < /a >
 </table>
 
 <font face="comic sans ms" color=green><div align=center><h3><u>The Buttons!</u></font></h3></div>
