--- a/sonicstadium/topcities/petitions.html
+++ b/sonicstadium/topcities/petitions.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><HTML>
  <HEAD>
@@ -58,10 +58,10 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 <div align=center><font size=2 color=black><b>This is where the power of the Sonic fans really come to play, the Sonic Petitions! Online there are many different petitions that you can sign to help convince companies to have done what you, the fans, want done in the world of Sonic. This is your chance to take part - There are many Sonic petitions to take, and a description with each one. If you think a particular cause is worth voting for, then click on the link to sign.<p>
 
-<center><a href="http://www.teamartail.com/satam/" target="_BLANK"><img SRC="http://www.teamartail.com/satam/banner.gif" ALT="Sonic SatAM Petition @ teamartail.com" BORDER=0 height=60 width=468></a></center>
+<center><a href="https://web.archive.org/20011101000000/http://www.teamartail.com/satam/" target="_BLANK"><img SRC="https://web.archive.org/20011101000000/http://www.teamartail.com/satam/banner.gif" ALT="Sonic SatAM Petition @ teamartail.com" BORDER=0 height=60 width=468></a></center>
 <font color=orange>Well, I certainly voted in this - This is a petition to bring back the glorious SatAM to your TV screens. Whether you liked it or not is sheer opinion, but if you hate Sonic Underground, and preferred SatAM, sign now! Be serious though, signitures are getting deleted for fake, or otherwise threatening signitures, so don't do it.</font><p>
 
-<center><a href="http://saveourknuckles.cjb.net/" target=_blank><img src="Update/sok_banner1.jpg" alt="Save Our Knuckles"></a></center>
+<center><a href="https://web.archive.org/20011101000000/http://saveourknuckles.cjb.net/" target=_blank><img src="Update/sok_banner1.jpg" alt="Save Our Knuckles"></a></center>
 <font color=orange>This is to, quite literally, bring back the Archie Knuckles comics in America. Dunno if UK fans'll be interested but if you were a US fan of this comic, sign here to help bring it back.</font>
 
 
