--- a/sonicstadium/topcities/sonadvboxes.html
+++ b/sonicstadium/topcities/sonadvboxes.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><HTML>
  <HEAD>
@@ -70,7 +70,7 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 </table>
 <p><div align=center><table border=0 align=center>
 <tr><td><div align=center><font face="comic sans ms" color="#ffc000"><u><b>North American Special limited edition</u></b>
-<tr><td><div align=center><font face="comic sans ms" color=green><b>This pic is from <a href="http://www.igndc.com/"><font color=blue>IGNDC.COM</a></font>. Click to enlarge...</b>
+<tr><td><div align=center><font face="comic sans ms" color=green><b>This pic is from <a href="https://web.archive.org/20011101000000/http://www.igndc.com/"><font color=blue>IGNDC.COM</a></font>. Click to enlarge...</b>
 <tr><td><div align=center><a href="pics/boxes/sonadvlimus.jpg"><img src="pics/boxes/sonadvlimusmall.gif" alt="click here for a bigger picture.">
 </table>
 <p>
