Revert "Okay, it's not deploying. Something's wrong."
This reverts commit d342d8e8c4406e8f94a5e20133f32f673a361ad9.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Tobi's GitHub Page</h1>
-<p>Hello. Here you will find old Sonic fansites as they were 20 years ago (to the day):</p>
+<p>Hello. Here you will find old Sonic fansites as they were 20 years ago:</p>
 <p><a href=/ratsonic/sonic/index.html>Rat.org Backup</a></p>
 <p><a href=/sonichq>Sonic HQ</a></p>
 <p><a href=/sonicstadium/topcities>Sonic Stadium</a></p>
